Project

General

Profile

Actions

Bug #9195

closed

r43951 raised many test failures of TestProcess and TestEnv on vc10-x64-trunk

Bug #9195: r43951 raised many test failures of TestProcess and TestEnv on vc10-x64-trunk

Added by phasis68 (Heesob Park) over 12 years ago. Updated over 12 years ago.

Status:
Closed
Target version:
-
ruby -v:
ruby 2.1.0dev (2013-12-02 trunk 43952) [x64-mswin64_120]
[ruby-core:58779]

Description

It seems that r43951 caused side effect of ENV handling.
After r43951, I can see 13 failures and 1 error which are related with ENV.

Here is somes test failures from http://ruby-mswin.cloudapp.net/vc10-x64/ruby-trunk/log/20131202T011551Z.log.html.gz

  1. Failure:
    TestProcess#test_execopts_unsetenv_others [D:/tmp/mswin-build20131202-6328-161zivw/ruby/test/ruby/test_process.rb:386]:
    <""> expected but was
    <"GEMRC=\nGEM_SKIP=\nhmm=\nRUBYGEMS_GEMDEPS=\n">.

  2. Failure:
    TestProcess#test_execopts_env_popen_vector [D:/tmp/mswin-build20131202-6328-161zivw/ruby/test/ruby/test_process.rb:327]:
    ["D:/tmp/mswin-build20131202-6328-161zivw/ruby/ruby.exe", "-e", "%w[RUBYLIB HOME USER TMPDIR].each{|e|ENV.delete(e)}", "-e", "ENV.each {|k,v| puts "#{k}=#{v}" }"].
    Expected /^hmm=/ to not match "ALLUSERSPROFILE=C:\ProgramData\nAPPDATA=C:\Users\usa\AppData\Roaming\nCommandPromptType=Native\nCommonProgramFiles=C:\Program Files\Common Files\nCommonProgramFiles(x86)=C:\Program Files (x86)\Common Files\nCommonProgramW6432=C:\Program Files\Common Files\nCOMPUTERNAME=RUBY-MSWIN\nComSpec=C:\Windows\system32\cmd.exe\nCYGWIN=nodosfilewarning\nFP_NO_HOST_CHECK=NO\nFramework35Version=v3.5\nFrameworkDir=C:\Windows\Microsoft.NET\Framework64\nFrameworkDIR64=C:\Windows\Microsoft.NET\Framework64\nFrameworkVersion=v4.0.30319\nFrameworkVersion64=v4.0.30319\nGEMRC=\nGEM_SKIP=\nGEM_SPEC_CACHE=D:/tmp/test_rubygems_2816/spec_cache\nhmm=\nhttps_proxy=http://localhost:1234\nHTTP_COOKIE2=name2=val2\nINCLUDE=D:\\libraries\\include;C:\\Program Files (x86)\Microsoft Visual Studio 10.0\VC\INCLUDE;C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\ATLMFC\INCLUDE;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\include;\nLIB=D:\libraries\lib;C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\LIB\amd64;C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\ATLMFC\LIB\amd64;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\lib\x64;\nLIBPATH=C:\Windows\Microsoft.NET\Framework64\v4.0.30319;C:\Windows\Microsoft.NET\Framework64\v3.5;C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\LIB\amd64;C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\ATLMFC\LIB\amd64;\nLOCALAPPDATA=C:\Users\usa\AppData\Local\nMAKEDIR=D:\tmp\mswin-build20131202-6328-161zivw\ruby\nMAKEFLAGS= \nNUMBER_OF_PROCESSORS=2\nOS=Windows_NT\nPATH=D:/tmp/mswin-build20131202-6328-161zivw/ruby;C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\BIN\amd64;C:\Windows\Microsoft.NET\Framework64\v4.0.30319;C:\Windows\Microsoft.NET\Framework64\v3.5;C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\VCPackages;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Common7\IDE;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Common7\Tools;C:\Program Files (x86)\HTML Help Workshop;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Performance Tools\x64;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Performance Tools;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\bin\NETFX 4.0 Tools\x64;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\bin\x64;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\bin;D:\ruby-2.0.0-p247-vc10-x64\bin;D:\libraries\bin;C:\Windows\system32;C:\Windows;C:\Windows\System32\Wbem;C:\Windows\System32\WindowsPowerShell\v1.0\;D:\cygwin\bin\nPATHEXT=.COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC\nPlatform=mswin64_100\nPROCESSOR_ARCHITECTURE=x64\nPROCESSOR_IDENTIFIER=AMD64 Family 16 Model 8 Stepping 1, AuthenticAMD\nPROCESSOR_LEVEL=16\nPROCESSOR_REVISION=0801\nProgramData=C:\ProgramData\nProgramFiles=C:\Program Files\nProgramFiles(x86)=C:\Program Files (x86)\nProgramW6432=C:\Program Files\nPROMPT=$P$G\nPSModulePath=C:\Windows\system32\WindowsPowerShell\v1.0\Modules\\nPUBLIC=C:\Users\Public\nRDOC_TEST=yes\nRUBY=D:/tmp/mswin-build20131202-6328-161zivw/ruby/ruby.exe\nRUBYGEMS_GEMDEPS=\nRUBYOPT=-w\nSERVER_PORT=8080\nSystemDrive=C:\nSystemRoot=C:\Windows\nTEMP=D:\tmp\nTESTS=-v\nTMP=D:\tmp\nUSERDOMAIN=RUBY-MSWIN\nUSERNAME=usa\nUSERPROFILE=C:\Users\usa\nVCINSTALLDIR=C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\\nVS100COMNTOOLS=C:\Program Files (x86)\Microsoft Visual Studio 10.0\Common7\Tools\\nVSINSTALLDIR=C:\Program Files (x86)\Microsoft Visual Studio 10.0\\nwindir=C:\Windows\nWindowsSdkDir=C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\\nwindows_tracing_flags=3\nwindows_tracing_logfile=C:\BVTBin\Tests\installpackage\csilogfile.log\n_NMAKE_VER=10.00.30319.01\n".

  3. Failure:
    TestProcess#test_execopts_env_popen_string [D:/tmp/mswin-build20131202-6328-161zivw/ruby/test/ruby/test_process.rb:327]:
    "D:/tmp/mswin-build20131202-6328-161zivw/ruby/ruby.exe test-script".
    Expected /^hmm=/ to not match "ALLUSERSPROFILE=C:\ProgramData\nAPPDATA=C:\Users\usa\AppData\Roaming\nCommandPromptType=Native\nCommonProgramFiles=C:\Program Files\Common Files\nCommonProgramFiles(x86)=C:\Program Files (x86)\Common Files\nCommonProgramW6432=C:\Program Files\Common Files\nCOMPUTERNAME=RUBY-MSWIN\nComSpec=C:\Windows\system32\cmd.exe\nCYGWIN=nodosfilewarning\nFP_NO_HOST_CHECK=NO\nFramework35Version=v3.5\nFrameworkDir=C:\Windows\Microsoft.NET\Framework64\nFrameworkDIR64=C:\Windows\Microsoft.NET\Framework64\nFrameworkVersion=v4.0.30319\nFrameworkVersion64=v4.0.30319\nGEMRC=\nGEM_SKIP=\nGEM_SPEC_CACHE=D:/tmp/test_rubygems_2816/spec_cache\nhmm=\nhttps_proxy=http://localhost:1234\nHTTP_COOKIE2=name2=val2\nINCLUDE=D:\\libraries\\include;C:\\Program Files (x86)\Microsoft Visual Studio 10.0\VC\INCLUDE;C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\ATLMFC\INCLUDE;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\include;\nLIB=D:\libraries\lib;C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\LIB\amd64;C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\ATLMFC\LIB\amd64;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\lib\x64;\nLIBPATH=C:\Windows\Microsoft.NET\Framework64\v4.0.30319;C:\Windows\Microsoft.NET\Framework64\v3.5;C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\LIB\amd64;C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\ATLMFC\LIB\amd64;\nLOCALAPPDATA=C:\Users\usa\AppData\Local\nMAKEDIR=D:\tmp\mswin-build20131202-6328-161zivw\ruby\nMAKEFLAGS= \nNUMBER_OF_PROCESSORS=2\nOS=Windows_NT\nPATH=D:/tmp/mswin-build20131202-6328-161zivw/ruby;C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\BIN\amd64;C:\Windows\Microsoft.NET\Framework64\v4.0.30319;C:\Windows\Microsoft.NET\Framework64\v3.5;C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\VCPackages;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Common7\IDE;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Common7\Tools;C:\Program Files (x86)\HTML Help Workshop;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Performance Tools\x64;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Performance Tools;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\bin\NETFX 4.0 Tools\x64;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\bin\x64;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\bin;D:\ruby-2.0.0-p247-vc10-x64\bin;D:\libraries\bin;C:\Windows\system32;C:\Windows;C:\Windows\System32\Wbem;C:\Windows\System32\WindowsPowerShell\v1.0\;D:\cygwin\bin\nPATHEXT=.COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC\nPlatform=mswin64_100\nPROCESSOR_ARCHITECTURE=x64\nPROCESSOR_IDENTIFIER=AMD64 Family 16 Model 8 Stepping 1, AuthenticAMD\nPROCESSOR_LEVEL=16\nPROCESSOR_REVISION=0801\nProgramData=C:\ProgramData\nProgramFiles=C:\Program Files\nProgramFiles(x86)=C:\Program Files (x86)\nProgramW6432=C:\Program Files\nPROMPT=$P$G\nPSModulePath=C:\Windows\system32\WindowsPowerShell\v1.0\Modules\\nPUBLIC=C:\Users\Public\nRDOC_TEST=yes\nRUBY=D:/tmp/mswin-build20131202-6328-161zivw/ruby/ruby.exe\nRUBYGEMS_GEMDEPS=\nRUBYOPT=-w\nSERVER_PORT=8080\nSystemDrive=C:\nSystemRoot=C:\Windows\nTEMP=D:\tmp\nTESTS=-v\nTMP=D:\tmp\nUSERDOMAIN=RUBY-MSWIN\nUSERNAME=usa\nUSERPROFILE=C:\Users\usa\nVCINSTALLDIR=C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\\nVS100COMNTOOLS=C:\Program Files (x86)\Microsoft Visual Studio 10.0\Common7\Tools\\nVSINSTALLDIR=C:\Program Files (x86)\Microsoft Visual Studio 10.0\\nwindir=C:\Windows\nWindowsSdkDir=C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\\nwindows_tracing_flags=3\nwindows_tracing_logfile=C:\BVTBin\Tests\installpackage\csilogfile.log\n_NMAKE_VER=10.00.30319.01\n".

  4. Failure:
    TestProcess#test_execopts_env [D:/tmp/mswin-build20131202-6328-161zivw/ruby/test/ruby/test_process.rb:302]:
    Expected /^hmm=/ to not match "ALLUSERSPROFILE=C:\ProgramData\nAPPDATA=C:\Users\usa\AppData\Roaming\nCommandPromptType=Native\nCommonProgramFiles=C:\Program Files\Common Files\nCommonProgramFiles(x86)=C:\Program Files (x86)\Common Files\nCommonProgramW6432=C:\Program Files\Common Files\nCOMPUTERNAME=RUBY-MSWIN\nComSpec=C:\Windows\system32\cmd.exe\nCYGWIN=nodosfilewarning\nFP_NO_HOST_CHECK=NO\nFramework35Version=v3.5\nFrameworkDir=C:\Windows\Microsoft.NET\Framework64\nFrameworkDIR64=C:\Windows\Microsoft.NET\Framework64\nFrameworkVersion=v4.0.30319\nFrameworkVersion64=v4.0.30319\nGEMRC=\nGEM_SKIP=\nGEM_SPEC_CACHE=D:/tmp/test_rubygems_2816/spec_cache\nhmm=\nhttps_proxy=http://localhost:1234\nHTTP_COOKIE2=name2=val2\nINCLUDE=D:\\libraries\\include;C:\\Program Files (x86)\Microsoft Visual Studio 10.0\VC\INCLUDE;C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\ATLMFC\INCLUDE;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\include;\nLIB=D:\libraries\lib;C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\LIB\amd64;C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\ATLMFC\LIB\amd64;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\lib\x64;\nLIBPATH=C:\Windows\Microsoft.NET\Framework64\v4.0.30319;C:\Windows\Microsoft.NET\Framework64\v3.5;C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\LIB\amd64;C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\ATLMFC\LIB\amd64;\nLOCALAPPDATA=C:\Users\usa\AppData\Local\nMAKEDIR=D:\tmp\mswin-build20131202-6328-161zivw\ruby\nMAKEFLAGS= \nNUMBER_OF_PROCESSORS=2\nOS=Windows_NT\nPATH=D:/tmp/mswin-build20131202-6328-161zivw/ruby;C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\BIN\amd64;C:\Windows\Microsoft.NET\Framework64\v4.0.30319;C:\Windows\Microsoft.NET\Framework64\v3.5;C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\VCPackages;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Common7\IDE;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Common7\Tools;C:\Program Files (x86)\HTML Help Workshop;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Performance Tools\x64;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Performance Tools;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\bin\NETFX 4.0 Tools\x64;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\bin\x64;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\bin;D:\ruby-2.0.0-p247-vc10-x64\bin;D:\libraries\bin;C:\Windows\system32;C:\Windows;C:\Windows\System32\Wbem;C:\Windows\System32\WindowsPowerShell\v1.0\;D:\cygwin\bin\nPATHEXT=.COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC\nPlatform=mswin64_100\nPROCESSOR_ARCHITECTURE=x64\nPROCESSOR_IDENTIFIER=AMD64 Family 16 Model 8 Stepping 1, AuthenticAMD\nPROCESSOR_LEVEL=16\nPROCESSOR_REVISION=0801\nProgramData=C:\ProgramData\nProgramFiles=C:\Program Files\nProgramFiles(x86)=C:\Program Files (x86)\nProgramW6432=C:\Program Files\nPROMPT=$P$G\nPSModulePath=C:\Windows\system32\WindowsPowerShell\v1.0\Modules\\nPUBLIC=C:\Users\Public\nRDOC_TEST=yes\nRUBY=D:/tmp/mswin-build20131202-6328-161zivw/ruby/ruby.exe\nRUBYGEMS_GEMDEPS=\nRUBYOPT=-w\nSERVER_PORT=8080\nSystemDrive=C:\nSystemRoot=C:\Windows\nTEMP=D:\tmp\nTESTS=-v\nTMP=D:\tmp\nUSERDOMAIN=RUBY-MSWIN\nUSERNAME=usa\nUSERPROFILE=C:\Users\usa\nVCINSTALLDIR=C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\\nVS100COMNTOOLS=C:\Program Files (x86)\Microsoft Visual Studio 10.0\Common7\Tools\\nVSINSTALLDIR=C:\Program Files (x86)\Microsoft Visual Studio 10.0\\nwindir=C:\Windows\nWindowsSdkDir=C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\\nwindows_tracing_flags=3\nwindows_tracing_logfile=C:\BVTBin\Tests\installpackage\csilogfile.log\n_NMAKE_VER=10.00.30319.01\n".

  5. Failure:
    TestEnv#test_clear [D:/tmp/mswin-build20131202-6328-161zivw/ruby/test/ruby/test_env.rb:224]:
    <0> expected but was
    <3>.

  6. Failure:
    TestEnv#test_update [D:/tmp/mswin-build20131202-6328-161zivw/ruby/test/ruby/test_env.rb:342]:
    <[["A", "B"],
    ["BAZ", "QUUX"],
    ["FOO", "BAR"],
    ["GEM_HOME", ""],
    ["GEM_PATH", ""],
    ["GEM_SKIP", ""]]> expected but was
    <[["A", "B"], ["BAZ", "QUUX"], ["FOO", "BAR"]]>.

  7. Failure:
    TestEnv#test_to_a [D:/tmp/mswin-build20131202-6328-161zivw/ruby/test/ruby/test_env.rb:249]:
    <2> expected but was
    <5>.

  8. Failure:
    TestEnv#test_empty_p [D:/tmp/mswin-build20131202-6328-161zivw/ruby/test/ruby/test_env.rb:270]:
    Expected {"GEM_HOME"=>nil, "GEM_PATH"=>nil, "GEM_SKIP"=>nil} to be empty?.

  9. Failure:
    TestEnv#test_replace [D:/tmp/mswin-build20131202-6328-161zivw/ruby/test/ruby/test_env.rb:342]:
    <[["BAZ", "QUX"],
    ["FOO", "BAR"],
    ["GEM_HOME", ""],
    ["GEM_PATH", ""],
    ["GEM_SKIP", ""]]> expected but was
    <[["BAZ", "QUX"], ["FOO", "BAR"]]>.

  10. Failure:
    TestEnv#test_invert [D:/tmp/mswin-build20131202-6328-161zivw/ruby/test/ruby/test_env.rb:342]:
    <[["", "GEM_SKIP"], ["BAR", "FOO"], ["QUX", "BAZ"]]> expected but was
    <[["BAR", "FOO"], ["QUX", "BAZ"]]>.

  11. Failure:
    TestEnv#test_inspect [D:/tmp/mswin-build20131202-6328-161zivw/ruby/test/ruby/test_env.rb:238]:
    Failed assertion, no message given.

  12. Failure:
    TestEnv#test_getenv [D:/tmp/mswin-build20131202-6328-161zivw/ruby/test/ruby/test_env.rb:98]:
    <""> expected but was
    .

  13. Failure:
    TestEnv#test_shift [D:/tmp/mswin-build20131202-6328-161zivw/ruby/test/ruby/test_env.rb:352]:
    Expected ["GEM_HOME", nil] to be nil.

  14. Error:
    TestEnv#test_fetch:
    KeyError: key not found: "PATH"
    D:/tmp/mswin-build20131202-6328-161zivw/ruby/test/ruby/test_env.rb:116:in fetch' D:/tmp/mswin-build20131202-6328-161zivw/ruby/test/ruby/test_env.rb:116:in test_fetch'

Interestingly, These failures are not found with MingW64 gcc compiler build version.

Updated by hsbt (Hiroshi SHIBATA) over 12 years ago Actions #1 [ruby-core:58780]

  • Assignee set to usa (Usaku NAKAMURA)

phasis68

r43951 is only bump version. Can you investigate broken commit?

Updated by phasis68 (Heesob Park) over 12 years ago Actions #2 [ruby-core:58782]

Sorry, The revision is r43950, not r43951.

Updated by usa (Usaku NAKAMURA) over 12 years ago Actions #3

  • Status changed from Open to Closed
  • % Done changed from 0 to 100

This issue was solved with changeset r43958.
Heesob, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.


  • hash.c (getenv): fixed test failures introduced by r43950.
    [ruby-core:58774] [Bug #9195] reported by phasis68 (Heesob Park).
Actions

Also available in: PDF Atom