* hash.c (getenv): fixed test failures introduced by r43950.   [ruby-core:58774] [Bug #9195] reported by phasis68 (Heesob Park).

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@43958 b2dd03c8-39d4-4d8f-98ff-823fe69b080e